0028056: Draw Harness, ViewerTest - correct vanimation command to produce stable timestamp on seek